# tair-client

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  bootstrap.sh  format_all_code.sh
benchmark/: .clang-tidy  CMakeLists.txt
benchmark/common/: ClockTime_benchmark.cpp  MemoryStat_benchmark.cpp  Mutex_benchmark.cpp  Num2Str_benchmark.cpp  SlotsBitset_benchmark.cpp  Statistics_benchmark.cpp  StringStream_benchmark.cpp  ThreadExecutor_benchmark.cpp  ThreadPool_benchmark.cpp
examples/: CMakeLists.txt  HelloTair.cpp
scripts/: fastcov.py
scripts/code_format/: clang-format-darwin-aarch64  clang-format-darwin-x86_64  clang-format-linux-x86_64
src/: CMakeLists.txt
src/client/: CMakeLists.txt  TairAsyncClient.cpp  TairAsyncClient.hpp  TairBaseClient.cpp  TairBaseClient.hpp  TairClient.cpp  TairClient.hpp  TairClientDefine.hpp  TairClientInfo.cpp  TairClientInfo.hpp  TairClientWrapper.cpp  TairClientWrapper.hpp  TairClusterAsyncClient.cpp  TairClusterAsyncClient.hpp  TairResult.hpp  TairResultHelper.hpp  TairSubscribeClient.cpp  TairSubscribeClient.hpp  TairTransactionClient.cpp  TairTransactionClient.hpp  TairURI.cpp  TairURI.hpp  mkversion.sh
src/client/interface/: ITairClient.hpp
src/client/params/: BitOperation.hpp  BitPositionParams.hpp  CopyParams.hpp  ExpireParams.hpp  GeoAddParams.hpp  GeoUnit.hpp  GetExParams.hpp  KeyWord.hpp  ListDirection.hpp  Params.hpp  ParamsAll.hpp  RestoreParams.hpp  ScanParams.hpp  SetParams.hpp  SortParams.hpp  ZAddParams.hpp  ZInterUnionParams.hpp  ZRangeParams.hpp  ZRemRangeOption.hpp
src/client/results/: ResultsAll.hpp  ScanResult.hpp  XPendingResult.hpp  XRangeResult.hpp  XReadResult.hpp
src/common/: Assert.cpp  Assert.hpp  Base64.cpp  Base64.hpp  BlockingQueue.hpp  BoundedQueue.hpp  CMakeLists.txt  CPUStatistics.cpp  CPUStatistics.hpp  CRC.cpp  CRC.hpp  CidrTrieTree.cpp  CidrTrieTree.hpp  ClockTime.hpp  Compiler.hpp  ConcurrentHashMap.hpp  Copyable.hpp  CoroutineThread.cpp  CoroutineThread.hpp  CountDownLatch.hpp  DateTime.hpp  EnableMakeShared.hpp  Endianconv.cpp  Endianconv.hpp  Expected.hpp  KeyHash.cpp  KeyHash.hpp  LRUMap.hpp  LZF.cpp  LZF.hpp  Logger.cpp  Logger.hpp  MapUtil.hpp  MathUtil.cpp  MathUtil.hpp  MemoryHook.cpp  MemoryHook.hpp  MemoryStat.cpp  MemoryStat.hpp  Mutex.hpp  (+27 more)
src/common/libaco/: aco.c  aco.h  aco_assert_override.h  acosw.S
src/common/statistics/: AtomicStatistics.hpp  LatencyStatistics.hpp
src/common/tracing/: StaticTracepoint-ELFx86.hpp  StaticTracepoint.hpp
src/network/: Acceptor.cpp  Acceptor.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Channel.cpp  Channel.hpp  Connector.cpp  Connector.hpp  DnsResolver.cpp  DnsResolver.hpp  Duration.cpp  Duration.hpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  EventLoopThread.cpp  EventLoopThread.hpp  EventLoopThreadPool.cpp  EventLoopThreadPool.hpp  EventWatcher.cpp  EventWatcher.hpp  NetworkStat.hpp  Sockets.cpp  Sockets.hpp  TcpClient.cpp  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp  Timer.hpp  TlsConnection.cpp  TlsConnection.hpp  TlsOptions.cpp  TlsOptions.hpp  Types.hpp
src/protocol/: CMakeLists.txt  ProtocolOptions.cpp  ProtocolOptions.hpp
src/protocol/codec/: Codec.hpp  CodecAble.hpp  CodecFactory.hpp  CodecType.hpp  DState.hpp
src/protocol/codec/memcached/: MemcachedCodec.cpp  MemcachedCodec.hpp  MemcachedCodecAble.hpp  MemcachedProtocol.hpp
src/protocol/codec/resp/: RESP2Codec.cpp  RESP2Codec.hpp  RESP2CodecAble.hpp  RESP3Codec.cpp  RESP3Codec.hpp  RESP3CodecAble.hpp  RESPProtocol.hpp
src/protocol/packet/: Packet.hpp
src/protocol/packet/memcached/: MemcachedGetPacket.hpp  MemcachedIncDecPacket.hpp  MemcachedMscanPacket.hpp  MemcachedStatusPacket.hpp  MemcachedStrPacket.hpp  MemcachedTouchPacket.hpp
src/protocol/packet/resp/: ArrayPacket.cpp  ArrayPacket.hpp  AttributePacket.hpp  BigNumberPacket.hpp  BlobErrorPacket.hpp  BooleanPacket.hpp  BulkStringPacket.cpp  BulkStringPacket.hpp  DoublePacket.hpp  ErrorPacket.hpp  IntegerPacket.hpp  MapPacket.cpp  MapPacket.hpp  NullPacket.hpp  PushPacket.hpp  RESPPacketFactory.cpp  RESPPacketFactory.hpp  RESPPacketHelper.hpp  SetPacket.hpp  SimpleStringPacket.hpp  VerbatimStringPacket.hpp
tests/ut_tests/: CMakeLists.txt
tests/ut_tests/client/: TairClient_Basic_test.cpp  TairClient_GenericCmd_test.cpp  TairClient_GeoCmd_test.cpp  TairClient_HashCmd_test.cpp  TairClient_HyperLogLogCmd_test.cpp  TairClient_ListCmd_test.cpp  TairClient_Params_test.cpp  TairClient_ScriptCmd_test.cpp  TairClient_SetCmd_test.cpp  TairClient_Standalone_Server.cpp  TairClient_Standalone_Server.hpp  TairClient_StreamCmd_test.cpp  TairClient_StringCmd_test.cpp  TairClient_TransactionCmd_test.cpp  TairClient_ZSetCmd_test.cpp  client_test.cpp
tests/ut_tests/common/: Any_test.cpp  Base64_test.cpp  ConcurrentHashMap_test.cpp  CoroutineThread_test.cpp  FlatHash_test.cpp  Format_test.cpp  KeyHash_test.cpp  LatencyMetric_test.cpp  MathUtil_test.cpp  Mutex_test.cpp  STL_test.cpp  Singleton_test.cpp  ThreadExecutorPool_test.cpp  ThreadLocalSingleton_test.cpp  ThreadLocal_test.cpp  ThreadPool_test.cpp  Utils_test.cpp  common_test.cpp
tests/ut_tests/common/memory/: MemoryStat_test.cpp
tests/ut_tests/network/: Buffer_test.cpp  DnsResolver_test.cpp  EventLoopStopTest.cpp  EventLoopThreadPool_Timer_test.cpp  EventLoopThread_Timer_test.cpp  EventLoop_Timer_test.cpp  Sockets_test.cpp  TcpServer_ConnMove_test.cpp  TcpServer_Resize_IO_test.cpp  TcpServer_TcpClient_test.cpp  network_test.cpp
tests/ut_tests/protocol/: Packet_test.cpp  protocol_test.cpp
tests/ut_tests/protocol/memcached/: MemcachedCodec_test.cpp
tests/ut_tests/protocol/resp/: ArrayPacket_test.cpp  AttributePacket_test.cpp  BigNumberPacket_test.cpp  BlobErrorPacket_test.cpp  BooleanPacket_test.cpp  BulkStringPacket_test.cpp  DoublePacket_test.cpp  ErrorPacket_test.cpp  IntegerPacket_test.cpp  MapPacket_test.cpp  NullPacket_test.cpp  PushPacket_test.cpp  RESP2Codec_test.cpp  RESP3Codec_test.cpp  RESPPacketFactory_test.cpp  SetPacket_test.cpp  SimpleStringPacket_test.cpp  VerbatimStringPacket_test.cpp
